--- a/app-administrator-sprzedawcy-oferty.html
+++ b/app-administrator-sprzedawcy-oferty.html
@@ -92,46 +92,140 @@
                             </nav>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <p class="mb-1">Dystrybutorzy</p>
-                            <h2 class="mb-4">Stoen Operator Sp. z o.o.</h2>
+                            <p class="mb-1">Sprzedawcy</p>
+                            <h2 class="mb-4">PKP Energetyka S.A.</h2>
                             <div class="mb-4">
                                 <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-szczegoly.html">Dane firmy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-umowy.html">Umowy</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-szczegoly.html">Dane firmy</a></li>
+                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-sprzedawcy-oferty.html">Oferty</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-umowy.html">Umowy</a></li>
                                 </ul>
                             </div>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwa</small></h3>
-                                        <p class="mb-0">Stoen Operator Sp. z o.o.</p>
-                                    </div>
-                                </div>
+                            <div class="table-responsive bg-white">
+                                <table class="table table-sm mb-0 border-start border-end border-top align-middle">
+                                    <thead class="bg-primary text-white">
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input"></div>
+                                            </th>
+                                            <th>Nazwa oferty</th>
+                                            <th>Taryfa</th>
+                                            <th>Data publikacji</th>
+                                            <th>Obowiązuje do</th>
+                                            <th class="text-end">Opcje</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input"></div>
+                                            </th>
+                                            <td>Cennik standardowy dla Konsumentów<br></td>
+                                            <td>G11</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
+                                            <td>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                    <div class="col-auto">
+                                                        <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input" checked=""></div>
+                                            </th>
+                                            <td>Energia elektryczna dla Odbiorców indywidualnych Taryfy fioletowej</td>
+                                            <td>G12</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
+                                            <td>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                    <div class="col-auto">
+                                                        <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input"></div>
+                                            </th>
+                                            <td>Taniej w weekendy</td>
+                                            <td>G12w</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
+                                            <td>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                    <div class="col-auto">
+                                                        <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input"></div>
+                                            </th>
+                                            <td>Cennik energii elektrycznej dla odbiorców indywidualnych</td>
+                                            <td>C11</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
+                                            <td>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                    <div class="col-auto">
+                                                        <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th>
+                                                <div class="form-check"><input type="checkbox" class="form-check-input"></div>
+                                            </th>
+                                            <td>Zielona Energia bez prognoz dla Klientów Indywidualnych</td>
+                                            <td>C12</td>
+                                            <td>01.01.2022</td>
+                                            <td>31.12.2022</td>
+                                            <td>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                    <div class="col-auto">
+                                                        <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Adres</small></h3>
-                                        <p class="mb-0">ul. Nieświeska 52<br>03-867 Warszawa</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
-                                        <p class="mb-0">+48 22 821 30 11</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Faks</small></h3>
-                                        <p class="mb-0">-</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
-                                        <p class="mb-0">zs.osd@stoen.pl<br></p>
-                                    </div>
-                                </div>
+                            <div class="mt-4">
+                                <nav class="d-flex justify-content-end">
+                                    <ul class="pagination mb-0 pagination-circle">
+                                        <li class="page-item"><a class="page-link" href="#">Pierwszy</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item active"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">Ostatni</a></li>
+                                    </ul>
+                                </nav>
                             </div>
                         </div>
                         <div>
@@ -142,14 +236,13 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-secondary" role="button" href="app-administrator-dystrybutorzy.html">Powrót</a></div>
+                                                        <div class="col-auto"><a class="btn btn-secondary" role="button" href="app-administrator-sprzedawcy.html">Powrót</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
                                                     <div class="row gx-2 align-items-center">
                                                         <div class="col-auto"><button class="btn btn-warning" type="button">Zablokuj</button></div>
                                                         <div class="col-auto"><button class="btn btn-danger" type="button">Usuń</button></div>
-                                                        <div class="col-auto"><a class="btn btn-info" role="button" href="app-administrator-dystrybutorzy-edycja.html">Edytuj</a></div>
                                                     </div>
                                                 </div>
                                             </div>
