--- a/app-administrator-sprzedawcy-szczegoly.html
+++ b/app-administrator-sprzedawcy-szczegoly.html
@@ -94,6 +94,13 @@
                         <div class="flex-grow-1 p-4">
                             <p class="mb-1">Sprzedawcy</p>
                             <h2 class="mb-4">PKP Energetyka S.A.</h2>
+                            <div class="mb-4">
+                                <ul class="nav nav-tabs">
+                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-sprzedawcy-szczegoly.html">Dane firmy</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-oferty.html">Oferty</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-umowy.html">Umowy</a></li>
+                                </ul>
+                            </div>
                             <div class="bg-white shadow-sm py-3 px-4 mb-4">
                                 <div class="row">
                                     <div class="col">
