--- a/app-sprzedawca-umowy-dodaj.html
+++ b/app-sprzedawca-umowy-dodaj.html
@@ -137,7 +137,7 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-secondary" role="button" href="app-sprzedawca-umowy.html">Powrót</a></div>
+                                                        <div class="col-auto"><a class="btn btn-primary" role="button" href="app-sprzedawca-umowy.html">Powrót</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
