--- a/app-administrator-sprzedawcy-oferty.html
+++ b/app-administrator-sprzedawcy-oferty.html
@@ -112,6 +112,7 @@
                                             <th>Taryfa</th>
                                             <th>Data publikacji</th>
                                             <th>Obowiązuje do</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -124,6 +125,9 @@
                                             <td>G11</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
@@ -144,6 +148,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -162,6 +169,9 @@
                                             <td>G12w</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
@@ -182,6 +192,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -200,6 +213,9 @@
                                             <td>C12</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
@@ -236,7 +252,7 @@
                                             <div class="row justify-content-end">
                                                 <div class="col-auto me-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-secondary" role="button" href="app-administrator-sprzedawcy.html">Powrót</a></div>
+                                                        <div class="col-auto"><a class="btn btn-primary" role="button" href="app-administrator-sprzedawcy.html">Powrót</a></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
