--- a/app-administrator-taryfy.html
+++ b/app-administrator-taryfy.html
@@ -104,6 +104,7 @@
                                             <th>Dystrybutor</th>
                                             <th>Data publikacji</th>
                                             <th>Obowiązuje do</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -116,6 +117,9 @@
                                             <td>TAURON Dystrybucja S.A.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-taryfy-szczegoly.html">Szczegóły</a></div>
@@ -136,6 +140,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -154,6 +161,9 @@
                                             <td>Energa-Operator S.A.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-taryfy-szczegoly.html">Szczegóły</a></div>
@@ -174,6 +184,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -192,6 +205,9 @@
                                             <td>Enea Operator Sp. z o.o.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-taryfy-szczegoly.html">Szczegóły</a></div>
