--- a/app-dystrybutor-taryfy.html
+++ b/app-dystrybutor-taryfy.html
@@ -98,6 +98,7 @@
                                             <th>Taryfa</th>
                                             <th>Data publikacji</th>
                                             <th>Obowiązuje do</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -109,6 +110,9 @@
                                             <td>G11</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
@@ -128,6 +132,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -145,6 +152,9 @@
                                             <td>G12w</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
@@ -164,6 +174,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -181,6 +194,9 @@
                                             <td>C12</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-taryfy-szczegoly.html">Szczegóły</a></div>
