--- a/app-dystrybutor-umowy.html
+++ b/app-dystrybutor-umowy.html
@@ -99,6 +99,7 @@
                                             <th>Sprzedawca</th>
                                             <th>Data zawarcia</th>
                                             <th>Data obowiązywania</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -111,6 +112,9 @@
                                             <td>Polenergia S.A.<br></td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-umowy-szczegoly.html">Szczegóły</a></div>
@@ -131,6 +135,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-umowy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -149,6 +156,9 @@
                                             <td>ORLEN Paliwa Sp. z o.o.​ </td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-umowy-szczegoly.html">Szczegóły</a></div>
@@ -169,6 +179,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-umowy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -187,6 +200,9 @@
                                             <td>Enea S.A.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-umowy-szczegoly.html">Szczegóły</a></div>
