--- a/app-sprzedawca-umowy.html
+++ b/app-sprzedawca-umowy.html
@@ -111,6 +111,7 @@
                                             <th>Dystrybutor</th>
                                             <th>Data zawarcia</th>
                                             <th>Data obowiązywania</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -123,6 +124,9 @@
                                             <td>TAURON Dystrybucja S.A.<br></td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-umowy-szczegoly.html">Szczegóły</a></div>
@@ -143,6 +147,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-umowy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -161,6 +168,9 @@
                                             <td>Energa-Operator S.A.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-umowy-szczegoly.html">Szczegóły</a></div>
@@ -181,6 +191,9 @@
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-umowy-szczegoly.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -199,6 +212,9 @@
                                             <td>Enea Operator Sp. z o.o.</td>
                                             <td>01.01.2022</td>
                                             <td>31.12.2022</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-umowy-szczegoly.html">Szczegóły</a></div>
