--- a/app-dystrybutor-firma.html
+++ b/app-dystrybutor-firma.html
@@ -87,7 +87,39 @@
                             </nav>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2>Dane firmy</h2>
+                            <h2 class="mb-4">Dane firmy</h2>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwa</small></h3>
+                                        <p class="mb-0">Stoen Operator Sp. z o.o.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Adres</small></h3>
+                                        <p class="mb-0">ul. Nieświeska 52<br>03-867 Warszawa</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
+                                        <p class="mb-0">+48 22 821 30 11</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Faks</small></h3>
+                                        <p class="mb-0">-</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
+                                        <p class="mb-0">zs.osd@stoen.pl<br></p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div>
                             <nav class="navbar navbar-light navbar-expand bg-white shadow-none p-0 border-top">
