--- a/app-dystrybutor-profil.html
+++ b/app-dystrybutor-profil.html
@@ -87,7 +87,31 @@
                             </nav>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2>Mój profil</h2>
+                            <h2 class="mb-4">Mój profil</h2>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Imię</small></h3>
+                                        <p class="mb-0">Robert</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwisko</small></h3>
+                                        <p class="mb-0">Chojnacki</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
+                                        <p class="mb-0">+48 987 654 321</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
+                                        <p class="mb-0">robert.chojnacki@example.com</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div>
                             <nav class="navbar navbar-light navbar-expand bg-white shadow-none p-0 border-top">
