--- a/app-sprzedawca-firma.html
+++ b/app-sprzedawca-firma.html
@@ -99,7 +99,39 @@
                             </nav>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2>Dane firmy</h2>
+                            <h2 class="mb-4">Dane firmy</h2>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwa</small></h3>
+                                        <p class="mb-0">PKP Energetyka S.A.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Adres</small></h3>
+                                        <p class="mb-0">00-681 Warszawa<br>ul. Hoża 63/67</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
+                                        <p class="mb-0">+48 22 474 19 00</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Faks</small></h3>
+                                        <p class="mb-0">-</p>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
+                                        <p class="mb-0">bok@pkpenergetyka.pl<br></p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div>
                             <nav class="navbar navbar-light navbar-expand bg-white shadow-none p-0 border-top">
